--- a/new_paper.ipynb
+++ b/new_paper.ipynb
@@ -47,6 +47,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports, etc go here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +153,9 @@
     "\n",
     "By intersecting the spheres around multiple known points, then intersecting that intersected volume with the surface of the Earth, where most endpoints are presumed to be, the region within which the unknown endpoint can be narrowed down.\n",
     "\n",
-    "To validate the utility of RTT data for this methodology, we need a source of RTT data covering a relatively diverse set of Internet paths where the locations of both endpoints are known with some precision; we turn to [RIPE Atlas](https://atlas.ripe.net) for this data."
+    "To validate the utility of RTT data for this methodology, we need a source of RTT data covering a relatively diverse set of Internet paths where the locations of both endpoints are known with some precision; we turn to [RIPE Atlas](https://atlas.ripe.net) for this data. We then use RTT measurements from multiple probes toward anchors with known locations, and compare the exclusion regions we can derive from measurements from those probes to the actual location of the anchor.\n",
+    "\n",
+    "For those probes for which we have measurements to multiple anchors, we also attempt to disprove the reported location, "
    ]
   },
   {
@@ -159,7 +170,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RIPE Atlas consists of a collection of about 10000 *probes* on which active measurements can be scheduled, and about 200 *anchors* which provide dedicated targets for active measurements from anywhere on the network. Atlas itself runs periodic *anchoring measurements* to each anchor from a relatively stable set of probes (for each anchor). Anchors and probes have self-reported locations. We presume reported locations for anchors, which are set up in coordination with the RIPE NCC, to be accurate, and assume the accuracy of probe locations to be sufficient for our purposes."
+    "RIPE Atlas consists of a collection of about 10000 *probes* on which active measurements can be scheduled, and about 200 *anchors* which provide dedicated targets for active measurements from anywhere on the network. Atlas itself runs periodic *anchoring measurements* to each anchor from a relatively stable set of probes (for each anchor). Anchors and probes have self-reported locations. We presume reported locations for anchors, which are set up in coordination with the RIPE NCC, to be accurate, and assume the accuracy of probe locations to be sufficient for our purposes.\n",
+    "\n",
+    ">  **NOTE on data preparation**\n",
+    ">\n",
+    "> If you are interacting with this paper in an environment or container that already contains the preprocessed raw data in the `atlas.hdf5` file, run the cell below to load the data into this notebook to continue generating plots and tables. Otherwise, go to [the data preparation notebook](new_dataprep.ipynb) and run all the cells there to download and preprocess data so that it can be used in this notebook. The RIPE Atlas data we use is publicly available, so you can run the data preparation notebook from anywhere without credentials. That notebook also contains details about the preprocessing we do."
    ]
   },
   {
@@ -168,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to load data from dataprep notebook or container goes here."
+    "# Code to load data from container goes here."
    ]
   },
   {
