--- a/new_dataprep.ipynb
+++ b/new_dataprep.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,9 @@
     "import requests\n",
     "import json\n",
     "import os.path\n",
+    "import bz2\n",
     "\n",
-    "from collections import namedtuple\n"
+    "from collections import namedtuple"
    ]
   },
   {
@@ -79,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Local path to cache Atlas measurement data in\n",
     "ATLAS_CACHE_PATH=\"atlas_cache_20181107\"\n",
     "\n",
-    "# Filename for HDF5 datastore\n",
-    "STORE_PATH=\"atlas-20181107.hdf5\"\n",
+    "# Directory name for JSON files containing generated dataframes\n",
+    "STORE_PATH=\"atlas_data_20181107\"\n",
     "\n",
     "# Start and end time for Atlas measurement retrieval\n",
     "START_TIME = int(dp.parse(\"2018-11-07T00:00:00Z\").timestamp())\n",
@@ -146,13 +147,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +166,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1005k  100 1005k    0     0   970k      0  0:00:01  0:00:01 --:--:--  970k\n"
+      "100 1006k  100 1006k    0     0   902k      0  0:00:01  0:00:01 --:--:--  902k\n"
      ]
     }
    ],
@@ -189,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,11 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "probe_df = probe_dataframe_from_file(\"all_probes.json\")"
+    "! mkdir -p $STORE_PATH\n",
+    "probe_df = probe_dataframe_from_file(\"all_probes.json\")\n",
+    "probe_df.to_json(STORE_PATH+\"/probe_df.ndjson.bz2\", orient=\"records\", lines=True, compression=\"bz2\")"
    ]
   },
   {
@@ -401,7 +397,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anchor_df = anchor_dataframe_from_v2api()"
+    "anchor_df = anchor_dataframe_from_v2api()\n",
+    "anchor_df.to_json(STORE_PATH+\"/anchor_df.ndjson.bz2\", orient=\"records\", lines=True, compression=\"bz2\")"
    ]
   },
   {
@@ -415,10 +412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "AnchoringMetadata = namedtuple(\"AnchoringMetadata\", (\"aid\", \"msm\", \"af\", \"proto\", \"start\", \"stop\", \"probe_ct\"))\n",
@@ -476,37 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "amsm_df = anchoring_measurements_from_v2api()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with pd.HDFStore(STORE_PATH) as store:\n",
-    "    store['amsm_df'] = amsm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with pd.HDFStore(STORE_PATH) as store:\n",
-    "     amsm_df = store['amsm_df']"
+    "amsm_df = anchoring_measurements_from_v2api()\n",
+    "amsm_df.to_json(STORE_PATH+\"/amsm_df.ndjson.bz2\", orient=\"records\", lines=True, compression=\"bz2\")"
    ]
   },
   {
@@ -518,10 +488,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Turn anchor names into anchor IDs\n",
@@ -542,38 +510,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1026363, 1026365, 1026391, 1026393, 1026399, 1026401, 1042255,\n",
-       "       1042257, 1043286, 1043288, 1404333, 1404335, 1423186, 1423188,\n",
-       "       1437284, 1437286, 1446417, 1446419, 1583040, 1583042, 1589862,\n",
-       "       1589864, 1591156, 1591158, 1664873, 1664875, 1665836, 1665838,\n",
-       "       1668851, 1668853, 1768005, 1768007, 1769991, 1769993, 1790232,\n",
-       "       1790234, 1804069, 1804071, 1849605, 1849607, 1875035, 1875037,\n",
-       "       1898895, 1898897, 1990233, 1990235, 2055768, 2055770, 2096533,\n",
-       "       2096536, 2395060, 2395062, 2398550, 2398552, 2417650, 2417652,\n",
-       "       2456804, 2456806, 3295749, 3295763, 3315653, 3315656, 3614641,\n",
-       "       3614644, 3622418, 3622421, 4464317, 4464320, 6931429, 6931432,\n",
-       "       6969364, 6969367, 7861646, 7861649, 7970886, 7970889, 8434915,\n",
-       "       8434918, 9180598, 9180601, 9180618, 9180621, 9180638, 9180641,\n",
-       "       9180652, 9180655, 9180666, 9180669, 9180704, 9180707, 9180711,\n",
-       "       9180714, 9180724, 9180727, 9180739, 9180742, 9180751, 9180754,\n",
-       "       9180766, 9180769, 9180792, 9180795, 9180928, 9180931, 9180954,\n",
-       "       9180957, 9180989, 9180993, 9181093, 9181096, 9181099, 9181102,\n",
-       "       9181174, 9181177, 9181253, 9181256, 9181265, 9181268, 9181275,\n",
-       "       9181278, 9181281, 9181284, 9181296, 9181299, 9181316, 9181319,\n",
-       "       9181351, 9181354, 9181363, 9181366, 9181371, 9181374, 9181396,\n",
-       "       9181399, 9181528, 9181531, 9181616, 9181619, 9181692, 9181695,\n",
-       "       9181745, 9181748, 9181777, 9181780, 9181820, 9181823, 9183384,\n",
-       "       9183387, 9183523, 9183526, 9183540, 9183543, 9183658, 9183661,\n",
-       "       9183786, 9183789, 9238669, 9238679])"
+       "array([], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
